--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.4.1",
     "bootstrap": "^5.0.2",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^3.0.0",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -40,6 +37,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "@openzeppelin/test-helpers": "^0.5.12"
   }
 }
