--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "node": "14.17.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@truffle/hdwallet-provider": "^1.4.1",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
     "truffle": "^5.3.14",
     "truffle-hdwallet-provider-privkey": "^0.3.0",
